[package]
name = "oh-my-card"
version = "0.1.0"
description = "Local-first credit card optimizer"
authors = ["Oh My Cards"]
edition = "2021"

[lib]
name = "oh_my_card_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
